force-app/main/default/objects/Incoming_Email_Checker__c/Incoming_Email_Checker__c.object-meta.xml
<CustomObject>
    <label>Incoming Email Checker</label>
    <nameField>
        <displayFormat>IEC-{00000}</displayFormat>
        <label>IEC No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incoming Email Checkers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>