force-app/main/default/objects/Incoming_Email_Checker__c/fields/Case_CcAddress__c.field-meta.xml
<CustomField>
    <fullName>Case_CcAddress__c</fullName>
    <label>.Case CcAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>