force-app/main/default/objects/Incoming_Email_Checker__c/fields/Case_Email_Inbox__c.field-meta.xml
<CustomField>
    <fullName>Case_Email_Inbox__c</fullName>
    <label>Case Email Inbox</label>
    <length>255</length>
    <type>Text</type>
</CustomField>