force-app/main/default/objects/Incoming_Email_Checker__c/fields/Case_ToAddress__c.field-meta.xml
<CustomField>
    <fullName>Case_ToAddress__c</fullName>
    <label>Case ToAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>