force-app/main/default/objects/Incoming_Email_Checker__c/fields/Email_Config_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_Config_ID__c</fullName>
    <label>Email Config ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>