force-app/main/default/objects/Incoming_Email_Checker__c/fields/Email_Config_Last_Order__c.field-meta.xml
<CustomField>
    <fullName>Email_Config_Last_Order__c</fullName>
    <label>Email Config Last Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>