force-app/main/default/objects/Incoming_Email_Checker__c/fields/Email_Config_Last_Order_Original__c.field-meta.xml
<CustomField>
    <fullName>Email_Config_Last_Order_Original__c</fullName>
    <label>Email Config Last Order Original</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>